@@ -320,8 +320,7 @@ TrackerFieldData *  tracker_db_get_metadata_field              (DBConnection   *
 
 /* XESAM stuff */
 TrackerDBResultSet *tracker_db_get_events                      (DBConnection *db_con);
-void                tracker_db_delete_handled_events           (DBConnection   *db_con, 
-                                                                TrackerDBResultSet *events);
+void                tracker_db_delete_handled_events           (DBConnection   *db_con);
 TrackerDBResultSet *tracker_db_get_live_search_deleted_ids     (DBConnection *db_con, 
                                                                 const gchar *search_id);
 TrackerDBResultSet *tracker_db_get_live_search_new_ids         (DBConnection *db_con, 
