@@ -53,20 +53,19 @@ GType        tracker_xesam_live_search_get_type           (void);
 void         tracker_xesam_live_search_set_id             (TrackerXesamLiveSearch  *self,
 							   const gchar             *search_id);
 const gchar* tracker_xesam_live_search_get_id             (TrackerXesamLiveSearch  *self);
-
 const gchar* tracker_xesam_live_search_get_where_query    (TrackerXesamLiveSearch  *self);
 const gchar* tracker_xesam_live_search_get_from_query     (TrackerXesamLiveSearch  *self);
 const gchar* tracker_xesam_live_search_get_xml_query      (TrackerXesamLiveSearch  *self);
 void         tracker_xesam_live_search_set_xml_query      (TrackerXesamLiveSearch  *self, 
 							   const gchar             *xml_query);
-void         tracker_xesam_live_search_set_session        (TrackerXesamLiveSearch *self, 
+void         tracker_xesam_live_search_set_session        (TrackerXesamLiveSearch  *self, 
 							   gpointer                 session);
-void         tracker_xesam_live_search_set_session        (TrackerXesamLiveSearch *self, 
-							   gpointer session);
+void         tracker_xesam_live_search_set_session        (TrackerXesamLiveSearch  *self, 
+							   gpointer                 session);
 void         tracker_xesam_live_search_activate           (TrackerXesamLiveSearch  *self,
 							   GError                 **error);
 gboolean     tracker_xesam_live_search_is_active          (TrackerXesamLiveSearch  *self);
-void         tracker_xesam_live_search_parse_query        (TrackerXesamLiveSearch  *self,
+gboolean     tracker_xesam_live_search_parse_query        (TrackerXesamLiveSearch  *self,
 							   GError                 **error);
 void         tracker_xesam_live_search_get_hit_data       (TrackerXesamLiveSearch  *self,
 							   GArray                  *hit_ids,
@@ -80,7 +79,7 @@ void         tracker_xesam_live_search_get_hits           (TrackerXesamLiveSearc
 void         tracker_xesam_live_search_get_range_hit_data (TrackerXesamLiveSearch  *self,
 							   guint                    a,
 							   guint                    b,
-							   GStrv                  fields, 
+							   GStrv                    fields, 
 							   GPtrArray              **hit_data,
 							   GError                 **error);
 void         tracker_xesam_live_search_get_range_hits     (TrackerXesamLiveSearch  *self,
@@ -101,7 +100,6 @@ void         tracker_xesam_live_search_emit_hits_modified (TrackerXesamLiveSearc
 							   GArray                  *hit_ids);
 void         tracker_xesam_live_search_emit_done          (TrackerXesamLiveSearch  *self);
 void         tracker_xesam_live_search_match_with_events  (TrackerXesamLiveSearch  *self, 
-							   TrackerDBResultSet      *events,
 							   GArray                 **added, 
 							   GArray                 **removed, 
 							   GArray                 **modified);
