@@ -26,6 +26,10 @@
 
 #include "tracker-db.h"
 
-void tracker_xesam_query_to_sql (DBConnection *db_con, const char *query, gchar **from, gchar **where, GError **error);
+void                    tracker_xesam_query_to_sql          (DBConnection *db_con, 
+                                                             const char   *query, 
+                                                             gchar       **from, 
+                                                             gchar       **where, 
+                                                             GError      **error);
 
 #endif
