@@ -189,13 +189,11 @@ tracker_xesam_get_live_search (const gchar *search_id, GError **error)
 static gboolean 
 live_search_handler (gpointer data)
 {
-	TrackerDBResultSet *result_set;
 	TrackerDBusXesam   *proxy;
 	DBConnection       *db_con = NULL;
 	GList              *sessions;
 	gboolean            reason_to_live = FALSE;
 
-	sessions = g_hash_table_get_values (xesam_sessions);
 	proxy = TRACKER_DBUS_XESAM (tracker_dbus_get_object (TRACKER_TYPE_DBUS_XESAM));
 
 	if (!proxy) {
@@ -208,69 +206,61 @@ live_search_handler (gpointer data)
 		return FALSE;
 	}
 
-	result_set = tracker_db_get_events (db_con);
+	sessions = g_hash_table_get_values (xesam_sessions);
 
-	if (result_set && tracker_db_result_set_get_n_rows (result_set) > 0) {
-		reason_to_live = TRUE;
+	while (sessions) {
+		GList *searches;
+		searches = tracker_xesam_session_get_searches (sessions->data);
 
-		while (sessions) {
-			GList *searches;
+		while (searches) {
+			TrackerXesamLiveSearch *search;
+			GArray                 *added = NULL;
+			GArray                 *removed = NULL;
+			GArray                 *modified = NULL;
+			search = searches->data;
+			tracker_xesam_live_search_match_with_events (search, 
+								     &added, 
+								     &removed, 
+								     &modified);
 
-			searches = tracker_xesam_session_get_searches (sessions->data);
-
-			while (searches) {
-				TrackerXesamLiveSearch *search;
-				GArray                 *added = NULL;
-				GArray                 *removed = NULL;
-				GArray                 *modified = NULL;
-
-				search = searches->data;
-				tracker_xesam_live_search_match_with_events (search, 
-									     result_set, 
-									     &added, 
-									     &removed, 
-									     &modified);
-
-				if (added && added->len > 0) { 
-					tracker_xesam_live_search_emit_hits_added (search, added->len);
-				}
-
-				if (added) {
-					g_array_free (added, TRUE);
-				}
-
-				if (removed && removed->len > 0) {
-					tracker_xesam_live_search_emit_hits_removed (search, removed);
-				}
-
-				if (removed) {
-					g_array_free (removed, TRUE);
-				}
-
-				if (modified && modified->len > 0) {
-					tracker_xesam_live_search_emit_hits_modified (search, modified);
-				}
-
-				if (modified) {
-					g_array_free (modified, TRUE);
-				}
-
-				searches = g_list_next (searches);
+			if (added && added->len > 0) {
+				reason_to_live = TRUE;
+				tracker_xesam_live_search_emit_hits_added (search, added->len);
 			}
 
-			g_list_free (searches);
+			if (added) {
+				g_array_free (added, TRUE);
+			}
 
-			sessions = g_list_next (sessions);
+			if (removed && removed->len > 0) {
+				reason_to_live = TRUE;
+				tracker_xesam_live_search_emit_hits_removed (search, removed);
+			}
+
+			if (removed) {
+				g_array_free (removed, TRUE);
+			}
+
+			if (modified && modified->len > 0) {
+				reason_to_live = TRUE;
+				tracker_xesam_live_search_emit_hits_modified (search, modified);
+			}
+
+			if (modified) {
+				g_array_free (modified, TRUE);
+			}
+
+			searches = g_list_next (searches);
 		}
 
-		g_list_free (sessions);
+		g_list_free (searches);
 
-		tracker_db_delete_handled_events (db_con, result_set);
+		sessions = g_list_next (sessions);
 	}
 
-	if (result_set) {
-		g_object_unref (result_set);
-	}
+	g_list_free (sessions);
+
+	tracker_db_delete_handled_events (db_con);
 
 	return reason_to_live;
 }
@@ -288,12 +278,12 @@ tracker_xesam_wakeup (guint32 last_id)
 
 	/* We could do this in a thread too, in case blocking the GMainLoop is
 	 * not ideal (it's not, because during these blocks of code, no DBus
-	 * request handler can run). I have added sufficient locking to let a
-	 * thread do it too (although untested).
+	 * request handler can run). 
 	 * 
 	 * In case of a thread we could use usleep() and stop the thread if
 	 * we didn't get a wakeup-call nor we had items to process this loop
 	 */
+
 	if (!live_search_handler_running) {
 		live_search_handler_running = TRUE;
 		g_timeout_add_full (G_PRIORITY_DEFAULT_IDLE,
@@ -312,9 +302,6 @@ tracker_xesam_generate_unique_key (void)
 	guint         t, ut, p, u, r;
 	GTimeVal      tv;
 
-	/* This function is hardly cryptographically random but should
-	 * be "good enough" 
-	 */
 	g_get_current_time (&tv);
 
 	t = tv.tv_sec;
@@ -328,39 +315,9 @@ tracker_xesam_generate_unique_key (void)
 	u = 0;
 #endif
 
-	/* Don't bother to seed; if it's based on the time or any
-	 * other changing info we can get, we may as well just use
-	 * that changing info. since we don't seed we'll at least get
-	 * a different number on every call to this function in the
-	 * same executable.
-	 */
 	r = rand ();
-
-	/* The letters may increase uniqueness by preventing "melds"
-	 * i.e. 01t01k01 and 0101t0k1 are not the same  
-	 */
 	key = g_strdup_printf ("%ut%uut%uu%up%ur%uk%u",
-			       /* Duplicate keys must be generated by
-				* two different program instances */ 
-			       serial,
-			       /* Duplicate keys must be generated in
-				* the same microsecond */
-			       t,
-			       ut,
-			       /* Duplicate keys must be generated by
-				* the same user */
-			       u,
-			       /* Duplicate keys must be generated by
-				* two programs that got the same PID */
-			       p,
-			       /* Duplicate keys must be generated with
-				* the same random seed and the same
-				* index into the series of pseudorandom
-				* values */
-			       r,
-			       /* Duplicate keys must result from
-				* running this function at the same
-				* stack location */
+			       serial, t, ut, u, p, r,
 			       GPOINTER_TO_UINT (&key));
 
 	++serial;
